--- a/src/header/header.css
+++ b/src/header/header.css
@@ -1,14 +1,12 @@
 .header {
   height: 50px;
-  background-color: #FFF;
-  border-bottom: 1px solid #000;
 }
 
-h1 {
-  margin: 0;
-}
-
-.menuLink {
+.headerLink {
   text-decoration: none;
   color: #000;
+}
+
+.logout {
+  float: right;
 }
