still working on styling, and fixed bug where I forgot to bind a function

--- a/src/header/header.css
+++ b/src/header/header.css
@@ -7,6 +7,12 @@
   color: #000;
 }
 
-.logout {
+.logoutLink {
   float: right;
+}
+
+@media (max-width: 767px) {
+  .header {
+    text-align: center;
+  }
 }
