--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  padding: 2em 1em;
+  padding: 0 1em;
   font-family: "Helvetica", "Arial", sans-serif;
   line-height: 1.5;
   color: #333;
