--- a/src/purchases/purchaseChart/purchaseChart.css
+++ b/src/purchases/purchaseChart/purchaseChart.css
@@ -1,4 +1,10 @@
 .buttonContainer {
   display: flex;
   justify-content: space-around;
+  padding-bottom: 10px;
+}
+
+.activeRange {
+  background-color: rgb(100, 200, 255);
+  color: rgb(255, 255, 255);
 }
