--- a/src/purchases/purchaseList/purchaseList.css
+++ b/src/purchases/purchaseList/purchaseList.css
@@ -1,3 +1,14 @@
 .listItemBtn {
-  margin-left: 5px;
+  float: right;
+}
+
+.list {
+  list-style-type: none;
+  padding: 0;
+  max-height: 300px;
+  overflow: scroll
+}
+
+.list li {
+  padding: 0 5px;
 }
